--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,5 @@ sudo: false
 cache:
   directories:
     - $HOME/.m2
+after_success:
+  - bash <(curl -s https://copilot.blackducksoftware.com/ci/travis/scripts/upload)
